<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label">Email</string>
    <string name="email_hint" />
    <string name="login_button_label">Login</string>
    <string name="label_signup">Sign Up</string>
    <string name="label_password">Password</string>
    <string name="label_password_hint">Insert Password</string>
    <string name="label_email_hint">Insert E-mail</string>
    <string name="welcome_button_text">Let\'s go!</string>
    <string name="welcome_title_text">Welcome to ShoeFashion !</string>
    <string name="welcome_description_text">In our store you will find all shoes with an unique discount. If you become a member you\'ll also gain 10% extra of discount.\nClick in the button below to start your journey!</string>
    <string name="instructions_title_text">How to use our app</string>
    <string name="instructions_text">After your registration you\'ll be able to explore our app.\nWhen you click \"Next\" you\'ll be able to see the list of shoes available. To know more details you only need to click in one. If you would like to add a shoe, just press the plus button at the bottom of the app and you\'ll need to fill all its details.\nPlease let us know if we can assist you.\nHave fun!</string>
    <string name="button_instructions_text">Next</string>
    <string name="shoe_list_title_text">Explore our store</string>
    <string name="logout_text">Logout</string>
    <string name="shoe_name_text">Shoe Name</string>
    <string name="shoe_company_text">Shoe Company</string>
    <string name="shoe_size_text">Shoe Size</string>
    <string name="shoe_description_text">Shoe Description</string>
    <string name="shoe_details_text">Check Shoe details</string>
    <string name="save_text">Save</string>
    <string name="add_text">Add</string>
    <string name="cancel_text">Cancel</string>
    <string name="big_text_test">hdjwhdjkhjhdjksahdjkhasjkdhsajkhfjashfdjkfhajskdhfjkhsdfhaskjhfjkshfjkhsdjkhfjkshdfjkhsdjkfhjksdhfjksdhjkfhsdkjhfjkdshfjkhsdfhksdjhfsdhfkjhdskhfkj   sslfjs  \nsjksjklsjksljlksjslkjssssslksjf</string>
</resources>
