<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".LoginFragment">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:labelFor="@id/email_input"
            android:text="@string/email_label"
            android:textSize="@dimen/big_text" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/label_email_hint"
            android:ems="10"
            android:hint="@string/label_email_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/password_input"
            android:text="@string/label_password"
            android:textSize="@dimen/big_text" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_hint"
            android:ems="10"
            android:hint="@string/label_password_hint"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signup_button"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_signup" />

            <Button
                android:id="@+id/login_button"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_label" />
        </LinearLayout>

    </LinearLayout>
</layout>