<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/instructions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/instructions_title_text"
                android:textAlignment="center"
                android:textColor="@color/colorTertiary"
                android:textSize="@dimen/big_text" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions_text"
                android:textAlignment="center"
                android:textSize="@dimen/medium_text" />

            <Button
                android:id="@+id/button_instructions_next"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_instructions_text" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>